# mkdocs-modify-base-url

./: .gitignore  README.md  pyproject.toml
src/mkdocs_modify_base_url/: plugin.py
